:lipstick: Labels for viewports